# path-tools-2d

./: .gitignore  Cargo.toml  pyproject.toml  rs_paths.pyi
examples/: test.py
src/: errors.rs  lib.rs  main.rs  path.rs
src/algorithms/: combine.rs  find_ellipses.rs  intersect.rs  mod.rs
src/geom/: arc.rs  ellipse.rs  line.rs  mod.rs  point.rs  segment.rs  straight.rs
src/helpers/: approx_eq.rs  complex.rs  deduplicate.rs  mod.rs
src/interfaces/python/: algorithms.rs  arc.rs  helpers.rs  line.rs  mod.rs  point.rs  segment.rs
